Fixes
- Fixed overlap issue on app secttion
- Added open in new tab to the blog link in nav
- Added CTA to the main page

--- a/css/styles.css
+++ b/css/styles.css
@@ -2850,15 +2850,15 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #1e30f3;
-  --bs-btn-border-color: #1e30f3;
+  --bs-btn-bg: #E3536A;
+  --bs-btn-border-color: #E3536A;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1a29cf;
-  --bs-btn-hover-border-color: #1826c2;
+  --bs-btn-hover-bg: #2C2B6F;
+  --bs-btn-hover-border-color: #2C2B6F;
   --bs-btn-focus-shadow-rgb: 64, 79, 245;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #1826c2;
-  --bs-btn-active-border-color: #1724b6;
+  --bs-btn-active-bg: #2C2B6F;
+  --bs-btn-active-border-color: #2C2B6F;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #1e30f3;
@@ -11561,7 +11561,7 @@ html {
 
 .bg-gradient-primary-to-secondary {
   background: #1e30f3;
-  background: linear-gradient(135deg, #1e30f3 0%, #e21e80 100%);
+  background: linear-gradient(135deg, #E3536A 10%, #2C2B6F 50%, #65AACF 90%);
 }
 
 .text-gradient {
